bpo-45948: Remove constructor discrepancy in C version of `ElementTree.XMLParser`